Thu Feb 25 10:14:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_base.mpb:
          When no features is set, all dds4cmm should require
          dummy_label.

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.h:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
          Implemented some more Qos related methods.

Thu Feb 25 09:08:55 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
          Implemented some get/set_qos methods.

Thu Feb 25 08:32:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/TimeConversion/Time_Conversion.mpc:
          Cleanup

Thu Feb 25 08:29:14 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.h:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/SubscriberQos.h:
          Implemented set/get_qos methods.

Thu Feb 25 08:16:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/tools/Split_Plan/Split_Plan.mpc:
          Added missing base projects

Thu Feb 25 07:46:04 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/ndds/DataReader.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp:
        * connectors/dds4ccm/impl/ndds/PublicationBuiltinTopicData.h:
        * connectors/dds4ccm/impl/ndds/Publisher.cpp:
        * connectors/dds4ccm/impl/ndds/Subscriber.cpp:
        * connectors/dds4ccm/impl/ndds/Topic.cpp:
          Implemented methods wich were not implemented yet.

Wed Feb 24 22:08:45 UTC 2010  William R. Otte <wotte@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication_Impl.cpp:
