@@ -99,11 +99,11 @@ namespace CIAO
     {
       DDS4CCM_TRACE ("DDS_DomainParticipant_i::create_publisher");
 #if defined (CIAO_DDS4CCM_NDDS) && (CIAO_DDS4CCM_NDDS==1)
+      ACE_UNUSED_ARG (qos);
       DDS4CCM_DEBUG (9, (LM_TRACE, CLINFO "CCM_DDS_DomainParticipant_i::create_publisher - "
                    "Creating Publisher\n"));
 
-      DDS_PublisherQos rti_qos;
-      rti_qos <<= qos;
+      DDS_PublisherQos rti_qos = DDS_PUBLISHER_QOS_DEFAULT;
 
       CCM_DDS_PublisherListener_i *rti_pl = 0;
       if (!CORBA::is_nil (a_listener))
@@ -236,6 +236,8 @@ namespace CIAO
       DDS4CCM_TRACE ("DDS_DomainParticipant_i::create_subscriber");
 
 #if defined (CIAO_DDS4CCM_NDDS) && (CIAO_DDS4CCM_NDDS==1)
+      ACE_UNUSED_ARG (qos);
+
       DDS4CCM_DEBUG (9, (LM_TRACE, CLINFO "CCM_DDS_DomainParticipant_i::create_subscriber - "
                    "Creating Subscriber\n"));
 
@@ -247,8 +249,7 @@ namespace CIAO
                             CORBA::NO_MEMORY ());
         }
 
-      DDS_SubscriberQos rti_qos;
-      rti_qos <<= qos;
+      DDS_SubscriberQos rti_qos = DDS_SUBSCRIBER_QOS_DEFAULT;
       DDSSubscriber * rti_sub =
         this->impl ()->create_subscriber (rti_qos,
                                           rti_sl,
@@ -343,6 +344,8 @@ namespace CIAO
       DDS4CCM_TRACE ("DDS_DomainParticipant_i::create_topic");
 
 #if defined (CIAO_DDS4CCM_NDDS) && (CIAO_DDS4CCM_NDDS==1)
+      ACE_UNUSED_ARG (qos);
+
       if (impl_name == 0)
         {
           DDS4CCM_ERROR (1, (LM_ERROR, CLINFO "DDS_DomainParticipant_i::create_topic - "
@@ -371,8 +374,7 @@ namespace CIAO
                             CORBA::NO_MEMORY ());
         }
 
-      DDS_TopicQos rti_qos;
-      rti_qos <<= qos;
+      DDS_TopicQos rti_qos = DDS_TOPIC_QOS_DEFAULT;
 
       DDSTopic *rti_topic = this->impl ()->create_topic (impl_name,
                                                       type_name,
